2012-01-11 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/base-assistant.c:
	* src/nact/base-assistant.h:
	BASE_ASSISTANT_TYPE GType macro is renamed as BASE_TYPE_ASSISTANT.
	Remove the work-around against #589745 (Apply message in GtkAssistant).

	* src/nact/nact-assistant-export.c (register_type):
	* src/nact/nact-assistant-import.c (register_type): Updated accordingly.

	* src/nact/base-dialog.c:
	* src/nact/base-dialog.h:
	BASE_WINDOW_TYPE is renamed as BASE_TYPE_WINDOW.
	Review whole initialization process.

	* src/nact/base-assistant.c (register_type):
	* src/nact/nact-iaction-tab.c (register_type):
	* src/nact/nact-ibasenames-tab.c (register_type):
	* src/nact/nact-icapabilities-tab.c (register_type):
	* src/nact/nact-icommand-tab.c (register_type):
	* src/nact/nact-ienvironment-tab.c (register_type):
	* src/nact/nact-iexecution-tab.c (register_type):
	* src/nact/nact-ifolders-tab.c (register_type):
	* src/nact/nact-imimetypes-tab.c (register_type):
	* src/nact/nact-iproperties-tab.c (register_type):
	* src/nact/nact-ischemes-tab.c (register_type):
	* src/nact/nact-main-window.c (register_type): Updated accordingly.

	* src/nact/base-builder.c:
	* src/nact/base-builder.h:
	BASE_BUILDER_TYPE is renamed as BASE_TYPE_BUILDER.

	* BASE_SIGNAL_QUIT_REQUESTED, BASE_SIGNAL_QUIT: New signals, defined in
	BaseISession interface.

	* src/nact/nact-marshal.def: New file.

	* src/nact/Makefile.am: Updated accordingly.

	* src/nact/base-application.c
	* src/nact/base-application.h
	(register_type): As BaseISession now only requires G_TYPE_OBJECT, then 
	declare the implementation in register_type().
	(base_application_run): Renamed as base_application_run_with_args().
	BASE_EXIT_CODE_START_FAIL exit code replaced with BASE_EXIT_CODE_PROGRAM.
	(base_application_is_willing_to_quit): New function, moved from BaseWindow.
	BASE_APPLICATION_TYPE macro renamed as BASE_TYPE_APPLICATION.

	* src/nact/base-assistant.c (do_run):
	* src/nact/base-dialog.c (do_run):