@@ -103,7 +103,7 @@ register_type( void )
 
 	g_debug( "%s", thisfn );
 
-	type = g_type_register_static( BASE_DIALOG_TYPE, "NactConfirmLogout", &info, 0 );
+	type = g_type_register_static( BASE_TYPE_DIALOG, "NactConfirmLogout", &info, 0 );
 
 	return( type );
 }
